--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "jquery": "^3.1.0",
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "snapsvg": "^0.4.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
