--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "jquery": "^3.1.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
-    "snapsvg": "^0.4.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "twojs-browserify": "^0.2.0"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
