--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "underscore": "^1.8.3",
-    "twojs-browserify": "^0.2.0"
+    "two.js": "^0.6.0"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
